# mta-elevator-risk

./: .gitignore  COLAB_COMPATIBILITY.md  README.md  decisions.md  pipeline-outline.md  progress.md  pyproject.toml  requirements-deep.txt  requirements-xgboost.txt  requirements.txt
config/: final_model_selection.yaml  frozen_test_period.yaml  pipeline.yaml
data/: README.md  provenance-template.yaml
data/raw/: df1_station_master.csv
experiments/: README.md  experiment-template.md
experiments/deep_learning/: README.md  session4_2_tcn_experiment_record.json
experiments/feature_sets/: README.md
experiments/model_selection/: README.md
experiments/target_definition/: README.md
notebooks/: README.md  colab_runner.ipynb
outputs/audits/: primary_target_prevalence_investigation.json  primary_target_prevalence_investigation.md  real_data_audit.json  real_data_audit.md  session5_5_data_lineage.md  session5_5_schema_comparison.json
outputs/metrics/: boosted_tree_comparison.md  boosted_tree_development_validation.json  final_development_model_decision.json  final_development_model_decision.md  primary_target_prevalence.json  rolling_development_validation.json  secondary_target_prevalence.json  session2_development_validation.json  session5_preflight.md  (+9 more)
tests/: conftest.py  test_boosted_trees.py  test_config.py  test_eligibility.py  test_features.py  test_final_selection_guardrail.py  test_session2.py  test_session3.py  test_session4.py  test_session4_3.py  test_source_to_canonical.py  test_split_guardrails.py  test_targets.py  test_tcn.py  test_validation.py
(+32 files in other folders)
